ingress_ipMode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-service
  labels:
    app: nginx-app
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/load-balancer-name: ingress-loadbalancer
   # kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # SSL 
    alb.ingress.kubernetes.io/listen-ports:'[{"HTTPS:443"},{"HTTP:80"}]'
    # alb.ingress.kubernetes.io/certificate-arn: 
    # HTTPS Redirect
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS
    external-dns.alpha.kubernetes.io/hostname: eks.abdelalitraining.com
    # Ip Mode
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: my-aws-ingress-class
 # defaultBackend:
 #    service:
 #       name: nginx-service
 #       port:
 #         number: 80
 # rules:
 #   - http:
 #       paths:
 #         - path: /*
 #           backend:
 #             serviceName: nginx-service
 #             servicePort: 30007
  tls:
  - hosts:
    - "*.abdelalitraining.com"
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

  rules:
   - host:nginxservice.abdelalitraining.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
          service:
           name: nginx-service
           port:
             number: 80
